--- a/app/main/templates/public/about.html
+++ b/app/main/templates/public/about.html
@@ -12,43 +12,43 @@
 {% block body %}
 <div class="card-deck" style="margin: auto">
     <div class="card" style="border-radius: 30px">
-      <img class="card-img-top" src="{% static 'media/antonin.jpg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
+      <img class="card-img-top" src="{% static 'media/antonin.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
-        <h5 class="card-title">Antonin</h5>
-        {% comment %} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> {% endcomment %}
+        <h5 class="card-title font-weight-bold">Antonin</h5>
+        <p class="card-text">La personne derrière tout le déploiement et la direction artistique de la plateforme. Un homme qui doit avoir 70 ans dans sa tête, mais malgré ça il est curieux et passionné. Il est toujours perfectionniste et il sait se dépasser quand il le faut (amoureux des échecs (le jeu hein)).</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Docker master</small>
+        <small class="text-muted font-weight-bold">Docker master</small>
       </div>
     </div>
     <div class="card" style="border-radius: 30px">
       <img class="card-img-top" src="{% static 'media/manon.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
-        <h5 class="card-title">Manon</h5>
-        {% comment %} <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> {% endcomment %}
+        <h5 class="card-title font-weight-bold">Manon</h5>
+        <p class="card-text">La personne derrière l'intelligence artificielle et de son usage au sein de la plateforme. Une femme intelligente et pragmatique. Son approche est toujours méthodique et prend en compte tous les facteurs. Elle est étincellante et remarquable (amoureuse de son mimi chat (le surnom de son chat c'est mimi, je ne blague pas)).</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Data Scientist master</small>
+        <small class="text-muted font-weight-bold">Data Scientist master</small>
       </div>
     </div>
     <div class="card" style="border-radius: 30px">
       <img class="card-img-top" src="{% static 'media/maxime.jpg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
-        <h5 class="card-title">Maxime</h5>
-        {% comment %} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> {% endcomment %}
+        <h5 class="card-title font-weight-bold">Maxime</h5>
+        <p class="card-text">La personne derrière l'automatisation de l'apport des données de la plateforme. Un homme qui se démarque par sa capacité d'analyse, saupoudré d'une adaptation hors du commun. Il apporte toujours son lot d'humour et de bonne humeur au sein de l'équipe. Il est beau gosse et musclé (amoureux du volant (toujours un amortisseur à changer depuis 9 mois)).</p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Airflow master</small>
+        <small class="text-muted font-weight-bold">Airflow master</small>
       </div>
     </div>
     <div class="card" style="border-radius: 30px">
         <img class="card-img-top" src="{% static 'media/agathe.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
         <div class="card-body">
-            <h5 class="card-title">Agathe</h5>
-            {% comment %} <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> {% endcomment %}
+            <h5 class="card-title font-weight-bold">Agathe</h5>
+            <p class="card-text">La personne derrière la gestion des données et de la mise en place de la direction artistique. Une femme empathique et stratége. Son excellente mémoire fait d'elle un atout pour la gestion des données, elle sait parfaitement donné voix aux données et aux personnes avec qui elle travaille. Elle est rayonnante et exceptionnelle (amoureuse de chanson (je ne blague pas c'est une championne)).</p>
         </div>
         <div class="card-footer">
-            <small class="text-muted">Azure master</small>
+            <small class="text-muted font-weight-bold">Azure master</small>
         </div>
     </div>
   </div>
