--- a/app/main/templates/public/about.html
+++ b/app/main/templates/public/about.html
@@ -15,7 +15,7 @@
       <img class="card-img-top" src="{% static 'media/antonin.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
         <h5 class="card-title font-weight-bold">Antonin</h5>
-        <p class="card-text">La personne derrière tout le déploiement et la direction artistique de la plateforme. Un homme qui doit avoir 70 ans dans sa tête, mais malgré ça il est curieux et passionné. Il est toujours perfectionniste et il sait se dépasser quand il le faut (amoureux des échecs (le jeu hein)).</p>
+        <p class="card-text">La personne derrière tout le déploiement et la direction artistique de la plateforme. Un homme qui doit avoir 70 ans dans sa tête, mais malgré ça il est curieux et passionné. Il est toujours perfectionniste et il sait se dépasser quand il le faut. Il est affectueux et drôle (amoureux des échecs (le jeu hein, il aime réfléchir quoi)).</p>
       </div>
       <div class="card-footer">
         <small class="text-muted font-weight-bold">Docker master</small>
@@ -25,7 +25,7 @@
       <img class="card-img-top" src="{% static 'media/manon.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
         <h5 class="card-title font-weight-bold">Manon</h5>
-        <p class="card-text">La personne derrière l'intelligence artificielle et de son usage au sein de la plateforme. Une femme intelligente et pragmatique. Son approche est toujours méthodique et prend en compte tous les facteurs. Elle est étincellante et remarquable (amoureuse de son mimi chat (le surnom de son chat c'est mimi, je ne blague pas)).</p>
+        <p class="card-text">La personne derrière l'intelligence artificielle et de son usage au sein de la plateforme. Une femme intelligente et pragmatique. Son approche est toujours méthodique et prend en compte tous les facteurs. Elle est rayonnante et remarquable (amoureuse d'escrime (si c'était possible elle n'hésiterait pas à taillader notre cher Docker master qui est drôle pourtant)).</p>
       </div>
       <div class="card-footer">
         <small class="text-muted font-weight-bold">Data Scientist master</small>
@@ -35,7 +35,7 @@
       <img class="card-img-top" src="{% static 'media/maxime.jpg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
       <div class="card-body">
         <h5 class="card-title font-weight-bold">Maxime</h5>
-        <p class="card-text">La personne derrière l'automatisation de l'apport des données de la plateforme. Un homme qui se démarque par sa capacité d'analyse, saupoudré d'une adaptation hors du commun. Il apporte toujours son lot d'humour et de bonne humeur au sein de l'équipe. Il est beau gosse et musclé (amoureux du volant (toujours un amortisseur à changer depuis 9 mois)).</p>
+        <p class="card-text">La personne derrière l'automatisation de l'apport des données de la plateforme. Un homme qui se démarque par sa capacité d'analyse, saupoudré d'une adaptation hors du commun. Il apporte toujours son lot d'humour et de bonne humeur au sein de l'équipe. Il est beau gosse et musclé (amoureux du volant (toujours un amortisseur à changer depuis 9 mois, mais n'ose pas l'avouer à l'équipe)).</p>
       </div>
       <div class="card-footer">
         <small class="text-muted font-weight-bold">Airflow master</small>
@@ -45,7 +45,7 @@
         <img class="card-img-top" src="{% static 'media/agathe.jpeg' %}" alt="Card image cap" style="border-radius: 30px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7)">
         <div class="card-body">
             <h5 class="card-title font-weight-bold">Agathe</h5>
-            <p class="card-text">La personne derrière la gestion des données et de la mise en place de la direction artistique. Une femme empathique et stratége. Son excellente mémoire fait d'elle un atout pour la gestion des données, elle sait parfaitement donné voix aux données et aux personnes avec qui elle travaille. Elle est rayonnante et exceptionnelle (amoureuse de chanson (je ne blague pas c'est une championne)).</p>
+            <p class="card-text">La personne derrière la gestion des données et de la mise en place de la direction artistique. Une femme empathique et stratége. Son excellente mémoire fait d'elle un atout pour la gestion des données, elle sait parfaitement donné voix aux données et aux personnes avec qui elle travaille. Elle est attentionnée et exceptionnelle (amoureuse de chanson (c'est une championne nationale, elle n'aime pas qu'on dise ça)).</p>
         </div>
         <div class="card-footer">
             <small class="text-muted font-weight-bold">Azure master</small>
